Revision history for {{$dist->name}}

{{$NEXT}}

0.39      2015-08-24 03:23:10 -0400
  - Fixed spurious warning: auto loading of record class (via FFI::Platypus::Record)
    was ALWAYS warning, when it should have only been warning on load failure.

0.38      2015-08-13 17:13:07 -0400
  - closure method now comes with a more useful diagnostic thinks to
    Carp::croak
  - Added a check for standard C headers.  This seems to help the configure
    stage find ptrdiff_t, which was frequently not detected correctly
    (at least on Linux).
  - Improved thread safety by using MY_CXT for some very infrequently used
    global variables.
  - Added IRC meta data information for metacpan.org.  Please join us at
    #native on irc.perl.org!
  - Many minor documentation corrections and tweaks.  Most significant is
    that Convert::Binary::C can now be recommended as it is once again
    properly maintained.
  - Added tests for threads and forks.  If these tests fail in your environment
    please let me know!

0.37      2015-05-29 14:28:21 -0400
  - Added compatability back in for older version of constant
    (newer one is not available on CPAN yet)

0.36      2015-05-29 13:40:32 -0400
  - Explicitly require constant pragma version 1.32

0.35      2015-05-29 12:06:39 -0400
  - FFI::Platypus::Record uses constant to create size of alignment constants
    instead of creating them with a sub reference (this usage was deprecated
    in Perl 5.22)

0.34      2015-05-07 09:27:04 -0400
  - Require Alien::FFI which is more reliable at configure time on some platforms

0.33      2015-03-23 21:55:02 -0400
  - Additional fix for Microsoft Visual C++ that didn't get folded into
    the previous release.
  - Fixed segfault during global destruction (gh#53)

0.32      2015-03-18 13:02:53 -0400
  - Make sure -L flags from Alien::FFI come before those in perl Config
    For more reliable builds
  - Support for Microsoft Visual C++ (you will probably also need
    Alien::FFI 0.09 or beter)
